got apple to align correctly

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -77,6 +77,7 @@ padding-right: 85px;
   height: 40px;
   padding-left: 25px;
   padding-right: 25px;
+  img {vertical-align: sub;}
   }
 }
 .col-12 {
